# iris

./: .gitignore  _config.ini  config.ini  iris.toml  presets.json  presets.toml  pyproject.toml  requirements.txt
iris/api/core/util/: parse_args.py
iris/api/helpers/: general.py
iris/tests/history/: history_sidebar_open_site_in_private_window.py
iris/tests/toolbars_window_controls/: browser_control_console.py
iris/tests/zoom_indicator/: default_zoom_level.py  zoom_in_menu_bar.py  zoom_level_multiple_tabs_with_mouse_wheel.py
src/: _config.js  index.html  iris.html  iris.py  main.css  main.js
